Fixed scrolling on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html {
   padding: 0;
   overflow-x: hidden;
   overflow-y: hidden;
+  position: relative;
 }
 
 /*logo styling*/
