--- a/src/components/home/PodcastCard/PodcastCard.css
+++ b/src/components/home/PodcastCard/PodcastCard.css
@@ -466,8 +466,8 @@ color: #4045F5;
   }
 
   .rhap_main-controls {
-    margin-left: -130%;
-    margin-top: 4.5%;
+    margin-left: -100%;
+    margin-top: 6%;
   }
 
   .rhap_main-controls-button {
