--- a/src/components/home/PodcastsContainer/PodcastsContainer.css
+++ b/src/components/home/PodcastsContainer/PodcastsContainer.css
@@ -8,8 +8,9 @@
   margin:0;
   margin-top: -19.7%; 
   background-repeat:no-repeat;
-  position: fixed;
   overflow-y: scroll;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .resultsContent {
